--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 image: node:4.2.2
 pages:
+    stages:
+    - deploy
     script:
     - npm install
     - ./node_modules/.bin/webpack --progress -p
