--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,14 @@
-image: alpine:latest
+image: node:4.2.2
+
 pages:
-  stage: deploy
+  cache:
+    paths:
+    - node_modules/
+
   script:
-  - echo 'Nothing to do...'
+  - npm install
+  artifacts:
+    paths:
+    - ./
   only:
-  - master
+    - master
